# dropitx-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
dropitx/: __init__.py  cli.py  config.py  qr.py  uploader.py
tests/: test_dropitx.py
