[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropitx"
version = "1.0.0"
description = "DropItX CLI — Developer-friendly file sharing from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DropItX", email = "support@dropitx.com"},
]
keywords = ["file-sharing", "cli", "upload", "transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://dropitx.com"
Documentation = "https://dropitx.com/docs"
Repository = "https://github.com/phuongddx/dropitx-cli"

[project.scripts]
dropitx = "dropitx.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropitx*"]
